checkpoint-12-agregarResena